--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-rainbow-components": "1.6.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-toast-notifications": "2.2.5"
   },
   "devDependencies": {
     "typescript": "3.3.3"
